--- a/Inicio/Inicio.html
+++ b/Inicio/Inicio.html
@@ -7,14 +7,35 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='Inicio.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src='Inicio.js'></script>
     <script src="https://kit.fontawesome.com/8c40961187.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8c40961187.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-   
+    <!--NAV BAR-->
+
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <button id="boton-modo">Modo oscuro</button>
+         <a class="navbar-brand luz" href="#">js</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active link-custom" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a>
+              <a class="nav-link active link-custom" aria-current="page" href="../Contacto/contacto.html">Contacto</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      <!--NAV BAR-->
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src='Inicio.js'></script>
 </body>
 </html>
