--- a/Inicio/Inicio.html
+++ b/Inicio/Inicio.html
@@ -33,9 +33,15 @@
 
       <!--NAV BAR-->
 
+      <!--PERFIL-->
 
+      <div class="full-height">
+        <h1><span class="typed"></span></h1>
+      </div>
 
+      <!--PERFIL-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src='Inicio.js'></script>
 </body>
 </html>
