--- a/Inicio/Inicio.html
+++ b/Inicio/Inicio.html
@@ -40,6 +40,16 @@
       </div>
 
       <!--PERFIL-->
+
+      <!--SOBRE MI-->
+    <div class="full-heightt">
+      <h2 class="sobre-mi">Sobre mí</h2>
+      <div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat omnis assumenda illo at architecto 
+          doloremque distinctio tempore praesentium illum qui explicabo ullam, animi quam. Perspiciatis non incidunt natus quibusdam velit?</p>
+      </div>
+    </div>
+      <!--SOBRE MI-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src='Inicio.js'></script>
