--- a/Inicio/Inicio.html
+++ b/Inicio/Inicio.html
@@ -43,10 +43,13 @@
 
       <!--SOBRE MI-->
     <div class="full-heightt">
-      <h2 class="sobre-mi">Sobre mí</h2>
+      <h2 class="tipeo">Sobre mí</h2>
       <div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat omnis assumenda illo at architecto 
           doloremque distinctio tempore praesentium illum qui explicabo ullam, animi quam. Perspiciatis non incidunt natus quibusdam velit?</p>
+          <div>
+            <h4 class="tipeo">Tecnologías</h4>
+          </div>
       </div>
     </div>
       <!--SOBRE MI-->
