mejora de cards

--- a/Inicio/Inicio.html
+++ b/Inicio/Inicio.html
@@ -54,9 +54,11 @@
           <div class="cards">
             <div class="cardList">
               <button class="cardList_btn btn btn--left">
+               <div class="icon">
                 <svg>
-                  <use xlink:href="#arrow-left"></use>
+                  <use xlink:href="#arrow-left"><i class="fas fa-arrow-left"></i></use>
                 </svg>
+              </div>
               </button>
 
               <div class="cards__wrapper">
@@ -82,10 +84,37 @@
               <button class="cardList__btn btn btn--right">
                 <div class="icon">
                   <svg>
-                    <use xlink:href="#arrow-right"></use>
+                    <use xlink:href="#arrow-right"><i class="fas fa-arrow-right"></i></use>
                   </svg>
                 </div>
               </button>
+            </div>
+
+          <div class="infoList">
+            <div class="info current--info">
+              <h1 class="text name">Front End</h1>
+              <h4 class="text lenguaje">HTML</h4>
+              <p class="text description">asdasdasd asdasd</p>
+            </div>
+
+            <div class="info current--info">
+              <h1 class="text name">Front End</h1>
+              <h4 class="text lenguaje">CSS</h4>
+              <p class="text description">asdasdasd asdasd</p>
+            </div>
+
+            <div class="info current--info">
+              <h1 class="text name">Lenguaje</h1>
+              <h4 class="text lenguaje">JavaScript</h4>
+              <p class="text description">asdasdasd asdasd</p>
+            </div>
+
+          </div>
+
+          </div>
+          <div class="app__bg">
+            <div class="app__bg__image current--image">
+              <img src="html5-mobile-app-native-hybrid-pros-cons.jpg" alt="">
             </div>
           </div>
           
