--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -30,6 +30,40 @@
   </nav>
 
   <!--NAV BAR-->
+
+  <!--FORMULARIO-->
+  <section id="contacto" class="full-height px-lg-5">
+    <div class="container">
+
+        <div class="row justify-content-center text-center">
+            <div class="col-lg-8 pb-4" data-aos="fade-up">
+                 <h6 class="text-brand">CONTACTO</h6>
+                 <h1>Formulario de contacto</h1>
+            </div>
+
+        <div class="col-lg-8" data-aos="fade-up" data-aos-deley="300">
+            <form action="#" class="row g-lg-3 gy-3">
+                <div class="form-group col-md-6">
+                    <input type="text" class="form-control" placeholder="Nombre">
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="email" class="form-control" placeholder="Correo Electronico">
+                </div>
+                <div class="form-group col-12">
+                    <input type="text" class="form-control" placeholder="Asunto">
+                </div>
+                <div class="form-group col-12">
+                    <textarea name="" rows="4" class="form-control" placeholder="Mensaje"></textarea>
+                </div>
+                <div class="form-group col-12 d-grid">
+                    <button type="submit" class="btn btn-brand">Enviar</button>
+                </div>
+            </form>
+        </div>
+     </div>
+    </div>
+</section>  
+  <!--FORMULARIO-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <script src='contacto.js'></script>
 </body>
