--- a/Inicio/Inicio.html
+++ b/Inicio/Inicio.html
@@ -65,8 +65,11 @@
 
       <!-- FOOTER -->
 
-      <footer>
-        
+      <footer class="footer">
+        <a target="_blank" href="mailto:maty_colazo@hotmail.com"><img src="../Imagenes/5968534.png" class="logo"></a>
+        <a target="_blank" href="https://github.com/MatiasColazo1"><img src="../Imagenes/github-original.svg" class="logo"></a>
+        <a target="_blank" href="https://www.linkedin.com/in/matias-colazo/"><img src="../Imagenes/linkedin-original.svg" class="logo"></a>
+        <a target="_blank" href="#"><img src="../Imagenes/descarga.png" class="logo"></a>
       </footer>
 
       <!-- FOOTER-->
