--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -30,6 +30,53 @@
   </nav>
 
   <!--NAV BAR-->
+  <!-- PROYECTOS -->
+
+  <div class="cards">
+    <div class="card card1">
+      <div class="contenedor">
+        <img src="../Imagenes/5968534.png" alt="">
+    </div>
+    <div class="details">
+      <h3>portfolio</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Facere assumenda atque quibusdam cumque sapiente, iste
+         itaque! Dolor aut iusto ullam temporibus d
+        olores laboriosam numquam autem perferendis ex omnis, 
+        aspernatur quos?</p>
+    </div>
+  </div>
+
+  <div class="card card2">
+    <div class="contenedor">
+      <img src="../Imagenes/descarga.png" alt="">
+  </div>
+  <div class="details">
+    <h3>2do proyecto</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+      Facere assumenda atque quibusdam cumque sapiente, iste
+       itaque! Dolor aut iusto ullam temporibus d
+      olores laboriosam numquam autem perferendis ex omnis, 
+      aspernatur quos?</p>
+  </div>
+</div>
+
+<div class="card card3">
+  <div class="contenedor">
+    <img src="../Imagenes/descarga.png" alt="">
+</div>
+<div class="details">
+  <h3>3r proyecto</h3>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+    Facere assumenda atque quibusdam cumque sapiente, iste
+     itaque! Dolor aut iusto ullam temporibus d
+    olores laboriosam numquam autem perferendis ex omnis, 
+    aspernatur quos?</p>
+</div>
+</div>
+</div>  
+
+  <!-- PROYECTOS -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <script src='proyectos.js'></script>
