--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -64,6 +64,22 @@
     </div>
 </section>  
   <!--FORMULARIO-->
+
+  <!-- FOOTER -->
+
+  <footer class="footer">
+    <div>
+      <h3>Podes contactarme tambien por: </h3>
+    <div>
+    <a target="_blank" href="mailto:maty_colazo@hotmail.com"><img src="../Imagenes/5968534.png" class="logo"></a>
+    <a target="_blank" href="https://github.com/MatiasColazo1"><img src="../Imagenes/github-original.svg" class="logo"></a>
+    <a target="_blank" href="https://www.linkedin.com/in/matias-colazo/"><img src="../Imagenes/linkedin-original.svg" class="logo"></a>
+    <a target="_blank" href="https://discord.com/users/511602986594729985"><img src="../Imagenes/descarga.png" class="logo"></a>
+  </div>
+  </div>
+  </footer>
+
+  <!-- FOOTER-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <script src='contacto.js'></script>
 </body>
