--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -44,19 +44,19 @@
         <div class="col-lg-8" data-aos="fade-up" data-aos-deley="300">
             <form action="#" class="row g-lg-3 gy-3">
                 <div class="form-group col-md-6">
-                    <input type="text" class="form-control" placeholder="Nombre">
+                    <input name="name" type="text" class="form-control" placeholder="Nombre">
                 </div>
                 <div class="form-group col-md-6">
-                    <input type="email" class="form-control" placeholder="Correo Electronico">
+                    <input name="email" type="email" class="form-control" placeholder="Correo Electronico">
                 </div>
                 <div class="form-group col-12">
-                    <input type="text" class="form-control" placeholder="Asunto">
+                    <input name="asunto" type="text" class="form-control" placeholder="Asunto">
                 </div>
                 <div class="form-group col-12">
-                    <textarea name="" rows="4" class="form-control" placeholder="Mensaje"></textarea>
+                    <textarea name="mensaje" rows="4" class="form-control" placeholder="Mensaje"></textarea>
                 </div>
                 <div class="form-group col-12 d-grid">
-                    <button type="submit" class="btn btn-brand">Enviar</button>
+                    <button type="submit" class="btn btn-brand" id="form">Enviar</button>
                 </div>
             </form>
         </div>
