--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -69,9 +69,9 @@
 
   <footer class="footer">
     <div>
-      <h3>Podes contactarme tambien por: </h3>
+      <h3>Podes contactarme por: </h3>
     <div>
-    <a target="_blank" href="mailto:maty_colazo@hotmail.com"><img src="../Imagenes/5968534.png" class="logo"></a>
+    <a target="_blank" href="mailto:matias@itdeveloper.ar"><img src="../Imagenes/5968534.png" class="logo"></a>
     <a target="_blank" href="https://github.com/MatiasColazo1"><img src="../Imagenes/github-original.svg" class="logo"></a>
     <a target="_blank" href="https://www.linkedin.com/in/matias-colazo/"><img src="../Imagenes/linkedin-original.svg" class="logo"></a>
     <a target="_blank" href="https://discord.com/users/511602986594729985"><img src="../Imagenes/descarga.png" class="logo"></a>
