--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -35,7 +35,7 @@
   <div class="cards">
     <div class="card card1">
       <div class="contenedor">
-        <img src="../Imagenes/5968534.png" alt="">
+        <img class="img" src="../Imagenes/5968534.png" alt="">
     </div>
     <div class="details">
       <h3>portfolio</h3>
@@ -49,7 +49,7 @@
 
   <div class="card card2">
     <div class="contenedor">
-      <img src="../Imagenes/descarga.png" alt="">
+      <img class="img" src="../Imagenes/descarga.png" alt="">
   </div>
   <div class="details">
     <h3>2do proyecto</h3>
@@ -63,7 +63,7 @@
 
 <div class="card card3">
   <div class="contenedor">
-    <img src="../Imagenes/descarga.png" alt="">
+    <img class="img" src="../Imagenes/descarga.png" alt="">
 </div>
 <div class="details">
   <h3>3r proyecto</h3>
@@ -77,6 +77,23 @@
 </div>  
 
   <!-- PROYECTOS -->
+
+
+  <!-- FOOTER -->
+
+  <footer class="footer">
+    <div>
+      <h3>Podes contactarme por: </h3>
+    <div>
+    <a target="_blank" href="mailto:matias@itdeveloper.ar"><img src="../Imagenes/5968534.png" class="logo"></a>
+    <a target="_blank" href="https://github.com/MatiasColazo1"><img src="../Imagenes/github-original.svg" class="logo"></a>
+    <a target="_blank" href="https://www.linkedin.com/in/matias-colazo/"><img src="../Imagenes/linkedin-original.svg" class="logo"></a>
+    <a target="_blank" href="https://discord.com/users/511602986594729985"><img src="../Imagenes/descarga.png" class="logo"></a>
+  </div>
+  </div>
+  </footer>
+
+  <!-- FOOTER-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <script src='proyectos.js'></script>
