--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -12,22 +12,16 @@
     
   <!--NAV BAR-->
 
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <button id="boton-modo">Modo oscuro</button>
-     <a class="navbar-brand luz" href="#">js</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active link-custom" aria-current="page" href="../Inicio/Inicio.html">Inicio</a>
-          <a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a>
-          <a class="nav-link active link-custom" aria-current="page" href="#">Contacto</a>
-        </div>
-      </div>
-    </div>
-  </nav>
+  
+  <header class="header">
+    <nav class="menu-fixed">
+      <ul class="nav-links">
+        <li><a class="nav-link active link-custom" aria-current="page" href="../Inicio/Inicio.html">Inicio</a></li>
+        <li><a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a></li>
+        <li><a class="nav-link active link-custom" aria-current="page" href="#">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <!--NAV BAR-->
 
