--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -15,7 +15,7 @@
   
   <header class="header">
     <nav class="menu-fixed">
-      <ul class="nav-links">
+      <ul class="nav-links my-list">
         <li><a class="nav-link active link-custom" aria-current="page" href="../Inicio/Inicio.html">Inicio</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="#">Contacto</a></li>
