--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -15,7 +15,7 @@
   
   <header class="header">
     <nav class="menu-fixed">
-      <ul class="nav-links">
+      <ul class="nav-links my-list">
         <li><a class="nav-link active link-custom" aria-current="page" href="../Inicio/Inicio.html">Inicio</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="#">Proyectos</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="../Contacto/contacto.html">Contacto</a></li>
