--- a/Inicio/Inicio.html
+++ b/Inicio/Inicio.html
@@ -19,7 +19,7 @@
         <ul class="nav-links my-list">
           <li><a class="nav-link active link-custom" aria-current="page" href="#">Inicio</a></li>
           <li><a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a></li>
-          <li><a class="nav-link active link-custom" aria-current="page" href="../Contacto/contacto.html">Contacto</a></li>
+          <li><a class="nav-link active link-custom" aria-current="page" href="../SobreMi/sobremi.html">Sobre Mí</a></li>
         </ul>
       </nav>
     </header>
