--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -18,7 +18,7 @@
       <ul class="nav-links my-list">
         <li><a class="nav-link active link-custom" aria-current="page" href="../Inicio/Inicio.html">Inicio</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="#">Proyectos</a></li>
-        <li><a class="nav-link active link-custom" aria-current="page" href="../Contacto/contacto.html">Contacto</a></li>
+        <li><a class="nav-link active link-custom" aria-current="page" href="../SobreMi/sobremi.html">Sobre Mí</a></li>
       </ul>
     </nav>
   </header>
