--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='contacto.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='sobremi.css'>
     <title>Document</title>
 </head>
 <body>
@@ -18,10 +18,11 @@
       <ul class="nav-links my-list">
         <li><a class="nav-link active link-custom" aria-current="page" href="../Inicio/Inicio.html">Inicio</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a></li>
-        <li><a class="nav-link active link-custom" aria-current="page" href="#">Contacto</a></li>
+        <li><a class="nav-link active link-custom" aria-current="page" href="#">Sobre Mí</a></li>
       </ul>
     </nav>
-  </header>
+  </header> 
+  
 
   <!--NAV BAR-->
 
