--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -26,10 +26,10 @@
   <!--NAV BAR-->
   <!-- PROYECTOS -->
 
-  <div class="cards">
-    
 
- 
+  <div class="cards full-height">
+    
+   
 </div>  
 
   <!-- PROYECTOS -->
