--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -19,7 +19,7 @@
   <header class="header">
     <nav class="menu-fixed">
       <ul class="nav-links my-list">
-        <li><a class="nav-link active link-custom" aria-current="page" href="../Inicio/Inicio.html">Inicio</a></li>
+        <li><a class="nav-link active link-custom" aria-current="page" href="../index.html">Inicio</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a>
         </li>
         <li><a class="nav-link active link-custom" aria-current="page" href="#">Sobre Mí</a></li>
@@ -53,181 +53,43 @@
             <div class="card border-success m-3" style="max-width: 18rem;">
               <div class="card-header">Front-End</div>
               <div class="card-body text-success">
-                <p class="card-text">
+                <h5 class="card-title">
                   - HTML<br>
                   - CSS<br>
                   - Bootstrap<br>
                   - Angular<br>
                   - TypeScript<br>
                   - JavaScript
-                </p>
+                </h5>
               </div>
             </div>
 
             <div class="card border-success m-3" style="max-width: 18rem;">
               <div class="card-header">Back-End</div>
               <div class="card-body text-success">
-                <p class="card-text">
+                <h5 class="card-title">
                   - Node.js<br>
                   - Express<br>
                   - Java<br>
                   - SpringBoot<br>
                   - MySQL
-                </p>
+                </h5>
               </div>
             </div>
 
             <div class="card border-success m-3" style="max-width: 18rem;">
               <div class="card-header">Utilidades</div>
               <div class="card-body text-success">
-                <p class="card-text">
+                <h5 class="card-title">
                   - Git<br>
                   - GitHub<br>
                   - Jira<br>
                   - Postman
-                </p>
+                </h5>
               </div>
             </div>
         </div>
     </div>
-    <!--
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-          <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="./../Imagenes/CSS-logo-1.avif" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="./../Imagenes/bootstrap-stack.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a short card.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="./../Imagenes/javascript.webp" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                    additional content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card h-100">
-              <img src="./../Imagenes/typescript.svg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                  additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item" data-bs-interval="2000">
-          <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="./../Imagenes/typescript.svg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card h-100">
-              <img src="./../Imagenes/typescript.svg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                  additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="./../Imagenes/Angular_full_color_logo.svg.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a short card.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="./../Imagenes/mysql.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                    additional content.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="./../Imagenes/nodejs-dark.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="./../Imagenes/express-facebook-share.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a short card.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="./../Imagenes/java.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                    additional content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card h-100">
-              <img src="./../Imagenes/typescript.svg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                  additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next btn btn-secondary" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
--->
-
   </div>
 
   <!--FORMULARIO-->
