--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -28,8 +28,32 @@
 
 
   <div class="cards full-height">
-    
-   
+    <div class="row">
+    <div class="card m-3" style="width: 18rem;">
+      <img src="../Imagenes/image.png" class="card-img-top img-fluid" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Portfolio FullStack</h5>
+        <p class="card-text">PortaFolio creado con Angular, Bootstrap, MySQL y Java(SpringBoot), Entre otros</p>
+        <a href="https://frontendmatias.web.app/" class="link" target="_blank">Visitar Proyecto</a>
+      </div>
+    </div>
+    <div class="card m-3" style="width: 18rem;">
+      <img src="../Imagenes/login.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Login + CRUD</h5>
+        <p class="card-text">Login y CRUD creado con Angular, Bootstrap, Nodejs(express), MySQL y TypeScript</p>
+        <a href="#" class="link" target="_blank">Visitar Proyecto </a>
+      </div>
+    </div>
+    <div class="card m-3" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
 </div>  
 
   <!-- PROYECTOS -->
