--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -37,19 +37,18 @@
     <div>
       <h3 class="subtitle">&lt;Matías/&gt;</h2>
         <p class="parrafo">
-          ¡Hola! Mi nombre es Matías Colazo, y soy un apasionado estudiante de programación de Rosario, Argentina. Me
-          dedico tanto al desarrollo
-          de front-end como al back-end, y estoy en constante aprendizaje para seguir creciendo en mi campo.
-          Con una sólida formación académica y un enfoque continuo en la mejora de mis habilidades, 
-         Actualmente, estoy centrado en ampliar mis conocimientos en el
-          área de QA (Control de Calidad),
-          lo que me permite tener una visión más completa del ciclo de desarrollo de software.
+          ¡Hola! Mi nombre es Matías.<br>
+          Soy apasionado estudiante de programación de Rosario, Argentina.<br>
+          Con una sólida formación académica y un enfoque continuo en mejorar mis habilidades como desarrollador
+          fullStack donde me encuentro en constante aprendizaje para seguir creciendo en el campo IT.<br>
+          Actualmente me encuentro centrado en ampliar mis conocimientos en el área de QA (Control de calidad) lo que me
+          permite tener una visión más completa del ciclo de desarrollo de software.
         </p>
         <h3 class="subtitle">&lt;Tecnologias/&gt;</h2>
-          
+
           <div class="row">
 
-          
+
             <div class="card border-success m-3" style="max-width: 18rem;">
               <div class="card-header">Front-End</div>
               <div class="card-body text-success">
@@ -88,7 +87,7 @@
                 </h5>
               </div>
             </div>
-        </div>
+          </div>
     </div>
   </div>
 
