--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -29,15 +29,15 @@
 
   <div class="cards full-height">
     <div class="row">
-    <div class="card m-3" style="width: 18rem;">
-      <img src="../Imagenes/image.png" class="card-img-top img-fluid" alt="...">
+    <div class="card m-3" style="width: 20rem;">
+      <img src="../Imagenes/Captura.PNG" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Portfolio FullStack</h5>
         <p class="card-text">PortaFolio creado con Angular, Bootstrap, MySQL y Java(SpringBoot), Entre otros</p>
         <a href="https://frontendmatias.web.app/" class="link" target="_blank">Visitar Proyecto</a>
       </div>
     </div>
-    <div class="card m-3" style="width: 18rem;">
+    <div class="card m-3" style="width: 20rem;">
       <img src="../Imagenes/login.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Login + CRUD</h5>
@@ -45,7 +45,7 @@
         <a href="#" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
-    <div class="card m-3" style="width: 18rem;">
+    <div class="card m-3" style="width: 20rem;">
       <img src="..." class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -54,6 +54,7 @@
       </div>
     </div>
   </div>
+  <p class="texto"><b>Trabajando en más proyectos...🧉</p>
 </div>  
 
   <!-- PROYECTOS -->
