--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel='stylesheet' type='text/css' media='screen' href='sobremi.css'>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <title>Document</title>
 </head>
 
@@ -20,13 +21,11 @@
     <nav class="menu-fixed">
       <ul class="nav-links my-list">
         <li><a class="nav-link active link-custom" aria-current="page" href="../index.html">Inicio</a></li>
-        <li><a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a>
-        </li>
+        <li><a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="#">Sobre Mí</a></li>
       </ul>
     </nav>
   </header>
-
 
   <!--NAV BAR-->
 
@@ -114,7 +113,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
-  <script src='contacto.js'></script>
+  <script src='sobremi.js'></script>
 </body>
 
 </html>
