--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="menu-fixed">
         <ul class="nav-links my-list">
           <li><a class="nav-link active link-custom" aria-current="page" href="#">Inicio</a></li>
-          <li><a class="nav-link active link-custom" aria-current="page" href="/Proyectos">Proyectos</a></li>
+          <li><a class="nav-link active link-custom" aria-current="page" href="./Proyectos/proyectos.html">Proyectos</a></li>
           <li><a class="nav-link active link-custom" aria-current="page" href="./SobreMi/sobremi.html">Sobre Mí</a></li>
         </ul>
       </nav>
