--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -12,7 +12,7 @@
     
   <!--NAV BAR-->
 
-  
+  <!--
   <header class="header">
     <nav class="menu-fixed">
       <ul class="nav-links my-list">
@@ -21,7 +21,27 @@
         <li><a class="nav-link active link-custom" aria-current="page" href="../SobreMi/sobremi.html">Sobre Mí</a></li>
       </ul>
     </nav>
-  </header>
+  </header>-->
+
+  <header class="header">
+  <nav class="nav menu-fixed">
+    <input type="checkbox" id="nav-check">
+   
+    <div class="nav-btn">
+      <label for="nav-check">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+    </div>
+    
+    <ul class="nav-list nav-links">
+      <li><a class="active link-custom" aria-current="page" href="../index.html">Inicio</a></li>
+      <li><a class="active link-custom" aria-current="page" href="#">Proyectos</a></li>
+      <li><a class="active link-custom" aria-current="page" href="../SobreMi/sobremi.html">Sobre Mí</a></li>
+    </ul>
+  </nav>
+</header>
 
   <!--NAV BAR-->
   <!-- PROYECTOS -->
@@ -29,7 +49,7 @@
 
   <div class="cards full-height">
     <div class="row">
-    <div class="card m-3" style="width: 20rem;">
+    <div class="card m-3 card-item" style="width: 20rem;">
       <img src="../Imagenes/Captura.PNG" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Portfolio FullStack</h5>
