--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -20,6 +20,10 @@
   <header class="header">
     <nav class="menu-fixed">
       <ul class="nav-links my-list">
+        <input type="checkbox" id="check">
+      <label for="check" class="checkbtn">
+        <i class='bx bx-menu'></i>
+      </label>
         <li><a class="nav-link active link-custom" aria-current="page" href="../index.html">Inicio</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a></li>
         <li><a class="nav-link active link-custom" aria-current="page" href="#">Sobre Mí</a></li>
