--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 
     <header class="header">
       <nav class="menu-fixed">
-        <ul class="nav-links my-list">
-          <li><a class="nav-link active link-custom" aria-current="page" href="#">Inicio</a></li>
-          <li><a class="nav-link active link-custom" aria-current="page" href="./Proyectos/proyectos.html">Proyectos</a></li>
-          <li><a class="nav-link active link-custom" aria-current="page" href="./SobreMi/sobremi.html">Sobre Mí</a></li>
-        </ul>
+        <div class="mobile-menu">
+          <input type="checkbox" id="toggle-menu">
+          <label class="menu-icon" for="toggle-menu"><span></span></label>
+          </div>
+          <ul class="nav-links my-list">
+            <li><a class="nav-link active link-custom" aria-current="page" href="#">Inicio</a></li>
+            <li><a class="nav-link active link-custom" aria-current="page" href="./Proyectos/proyectos.html">Proyectos</a></li>
+            <li><a class="nav-link active link-custom" aria-current="page" href="./SobreMi/sobremi.html">Sobre Mí</a></li>
+          </ul>
       </nav>
     </header>
         
