--- a/index.html
+++ b/index.html
@@ -15,28 +15,37 @@
     <!--NAV BAR-->
 
     <header class="header">
-      <nav class="menu-fixed">
-        <div class="mobile-menu">
-          <input type="checkbox" id="toggle-menu">
-          <label class="menu-icon" for="toggle-menu"><span></span></label>
-          </div>
-          <ul class="nav-links my-list">
-            <li><a class="nav-link active link-custom" aria-current="page" href="#">Inicio</a></li>
-            <li><a class="nav-link active link-custom" aria-current="page" href="./Proyectos/proyectos.html">Proyectos</a></li>
-            <li><a class="nav-link active link-custom" aria-current="page" href="./SobreMi/sobremi.html">Sobre Mí</a></li>
-          </ul>
+      <nav class="nav menu-fixed">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+        <ul class="nav-list nav-links">
+          <li><a class="active link-custom" aria-current="page" href="#">Inicio</a></li>
+          <li><a class="active link-custom" aria-current="page" href="./Proyectos/proyectos.html">Proyectos</a></li>
+          <li><a class="active link-custom" aria-current="page" href="./SobreMi/sobremi.html">Sobre Mí</a></li>
+        </ul>
       </nav>
     </header>
         
       <!--NAV BAR-->
 
       <!--PERFIL-->
-
-      <div class="full-height">
-        <h1><span class="typed-hello"></span></h1>
-        <p><span class="typed-loop"></span></p>
-      </div>
-
+      <div class="container">
+        <div class="content">
+            <div class="full-height">
+                <h1><span class="typed-hello"></span></h1>
+                <p><span class="typed-loop"></span></p>
+            </div>
+        </div>
+        <div class="image full-height">
+            <img src="./Imagenes/git.png" alt="Imagen Git">
+        </div>
+    </div>
       <!--PERFIL-->
 
   <footer class="footer">
