--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -18,15 +18,19 @@
 
 
   <header class="header">
-    <nav class="menu-fixed">
-      <ul class="nav-links my-list">
-        <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class='bx bx-menu'></i>
-      </label>
-        <li><a class="nav-link active link-custom" aria-current="page" href="../index.html">Inicio</a></li>
-        <li><a class="nav-link active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a></li>
-        <li><a class="nav-link active link-custom" aria-current="page" href="#">Sobre Mí</a></li>
+    <nav class="nav menu-fixed">
+      <input type="checkbox" id="nav-check">
+      <div class="nav-btn">
+        <label for="nav-check">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
+      <ul class="nav-list nav-links">
+        <li><a class="active link-custom" aria-current="page" href="../index.html">Inicio</a></li>
+        <li><a class="active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a></li>
+        <li><a class="active link-custom" aria-current="page" href="#">Sobre Mí</a></li>
       </ul>
     </nav>
   </header>
