--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="image full-height">
-            <img src="./Imagenes/git.png" alt="Imagen Git">
+            <img src="" alt="">
         </div>
     </div>
       <!--PERFIL-->
