--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <p><span class="typed-loop"></span></p>
             </div>
         </div>
-        <div class="image full-height">
-            <img src="" alt="">
+        <div class="image">
+            <img class="perfil" src="./Imagenes/matias(1).jpg" alt="matias">
         </div>
     </div>
       <!--PERFIL-->
