--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -60,15 +60,15 @@
       <div class="card-body">
         <h5 class="card-title">Login + CRUD</h5>
         <p class="card-text">Login y CRUD creado con Angular, Bootstrap, Nodejs(express), MySQL y TypeScript</p>
-        <a href="#" class="link" target="_blank">Visitar Proyecto </a>
+        <a href="https://github.com/MatiasColazo1/login-nodejs" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
     <div class="card m-3" style="width: 20rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="../Imagenes/deploy.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Lista de Paises</h5>
+        <p class="card-text">Crud basico creado con Angular, Nodejs(express) y MySQL (sin deploy temporalmente)</p>
+        <a href="https://github.com/MatiasColazo1/crudNode.js" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
   </div>
