--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -9,7 +9,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel='stylesheet' type='text/css' media='screen' href='sobremi.css'>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <title>Document</title>
+  <title>Matías Colazo</title>
 </head>
 
 <body>
