--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Matías Colazo</title>
-    <link rel="shortcut icon" href="./Imagenes/icono.png" />
+    <meta name="description" content="Matías Colazo - Portfolio Web: Desarrollador Full Stack y QA">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="shortcut icon" href="./Imagenes/icono.png" />
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8c40961187.js" crossorigin="anonymous"></script>
