--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Matías Colazo</title>
     <meta name="description" content="Matías Colazo - Portfolio Web: Desarrollador Full Stack y QA">
+    <meta name="og:image" content="https://ibb.co/swm5gHr">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" href="./Imagenes/icono.png" />
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
