--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -60,7 +60,7 @@
       <img src="../Imagenes/login.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Login + CRUD</h5>
-        <p class="card-text">Login y CRUD creado con Angular, Bootstrap, Nodejs(express), MySQL y TypeScript</p>
+        <p class="card-text">Login y CRUD creado con Angular, Bootstrap, Nodejs(express), MySQL y TypeScript (sin deploy temporalmente)</p>
         <a href="https://github.com/MatiasColazo1/login-nodejs" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
