--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -72,6 +72,22 @@
         <a href="https://github.com/MatiasColazo1/crudNode.js" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
+    <div class="card m-3" style="width: 20rem;">
+      <img src="../Imagenes/tareas.png" class="card-img-top" alt="...">
+      <div class="card-body tareas-body">
+        <h5 class="card-title">Lista de Tareas</h5>
+        <p class="card-text">Listado de tareas con CRUD en Angular y guardado en LocalStorage</p>
+        <a href="https://angular-localstorage.vercel.app/" class="link" target="_blank">Visitar Proyecto </a>
+      </div>
+    </div>
+    <div class="card m-3" style="width: 20rem;">
+      <img src="../Imagenes/puntos.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Sistema de Votos</h5>
+        <p class="card-text">Sistema de puntos con un CRUD creado solo con Angular</p>
+        <a href="https://angular-votos-one.vercel.app/" class="link" target="_blank">Visitar Proyecto </a>
+      </div>
+    </div>
   </div>
   <p class="texto"><b>Trabajando en más proyectos...🧉</p>
 </div>  
