--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -76,7 +76,7 @@
       <img src="../Imagenes/tareas.png" class="card-img-top" alt="...">
       <div class="card-body tareas-body">
         <h5 class="card-title">Lista de Tareas</h5>
-        <p class="card-text">Listado de tareas con CRUD en Angular y guardado en LocalStorage</p>
+        <p class="card-text">Listado de tareas con CRUD en Angular y guardado en LocalStorage <br><br></p>
         <a href="https://angular-localstorage.vercel.app/" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
@@ -84,7 +84,7 @@
       <img src="../Imagenes/puntos.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Sistema de Votos</h5>
-        <p class="card-text">Sistema de puntos con un CRUD creado solo con Angular</p>
+        <p class="card-text">Sistema de puntos con un CRUD creado solo con Angular <br><br></p>
         <a href="https://angular-votos-one.vercel.app/" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
