proyecto subido del clima

--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -88,6 +88,14 @@
         <a href="https://angular-votos-one.vercel.app/" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
+    <div class="card m-3" style="width: 20rem;">
+      <img src="../Imagenes/clima.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Aplicación del Clima</h5>
+        <p class="card-text">API del clima consumida con Angular e implementación de bootswatch<br><br></p>
+        <a href="https://angular-clima.vercel.app/" class="link" target="_blank">Visitar Proyecto </a>
+      </div>
+    </div>
   </div>
   <p class="texto"><b>Trabajando en más proyectos...🧉</p>
 </div>  
