--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -90,7 +90,7 @@
                 <h5 class="card-title">
                   - Git<br>
                   - GitHub<br>
-                  - Jira<br>
+                  - Trello<br>
                   - Postman
                 </h5>
               </div>
