--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -80,6 +80,7 @@
                   - Java<br>
                   - SpringBoot<br>
                   - MySQL
+                  - MongoDB
                 </h5>
               </div>
             </div>
