--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -56,6 +56,22 @@
         <a href="https://frontendmatias.web.app/" class="link" target="_blank">Visitar Proyecto</a>
       </div>
     </div>
+    <div class="card m-3 card-item" style="width: 20rem;">
+      <img src="../Imagenes/agenda.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Agenda Personal</h5>
+        <p class="card-text">Agenda personal creada en conjunto con Angular, Nodejs(express), MongoDB, entre otros</p>
+        <a href="https://agendamb.vercel.app/signin" class="link" target="_blank">Visitar Proyecto</a>
+      </div>
+    </div>
+    <div class="card m-3 card-item" style="width: 20rem;">
+      <img src="../Imagenes/tiendadeuñas.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Pagina de Manicuria</h5>
+        <p class="card-text">Pagina de manicuria, creada en en conjunto con Angular, Bootstrap, entre otros </p>
+        <a href="https://valesosa.com.ar" class="link" target="_blank">Visitar Proyecto</a>
+      </div>
+    </div>
     <div class="card m-3" style="width: 20rem;">
       <img src="../Imagenes/login.png" class="card-img-top" alt="...">
       <div class="card-body">
