nuevos proyectos y arreglo footer

--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -73,35 +73,19 @@
       </div>
     </div>
     <div class="card m-3" style="width: 20rem;">
-      <img src="../Imagenes/login.png" class="card-img-top" alt="...">
+      <img src="../Imagenes/psicologos.PNG" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Login + CRUD</h5>
-        <p class="card-text">Login y CRUD creado con Angular, Bootstrap, Nodejs(express), MySQL y TypeScript (sin deploy temporalmente)</p>
-        <a href="https://github.com/MatiasColazo1/login-nodejs" class="link" target="_blank">Visitar Proyecto </a>
+        <h5 class="card-title">Pagina de Psicologos</h5>
+        <p class="card-text">Pagina para terapias psicologicas y alternativas. Utilizando Angular, Bootstrap, entre otros</p>
+        <a href="https://www.terapiajdg.com/" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
     <div class="card m-3" style="width: 20rem;">
-      <img src="../Imagenes/deploy.png" class="card-img-top" alt="...">
+      <img src="../Imagenes/optica.PNG" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Lista de Paises</h5>
-        <p class="card-text">Crud basico creado con Angular, Nodejs(express) y MySQL (sin deploy temporalmente)</p>
-        <a href="https://github.com/MatiasColazo1/crudNode.js" class="link" target="_blank">Visitar Proyecto </a>
-      </div>
-    </div>
-    <div class="card m-3" style="width: 20rem;">
-      <img src="../Imagenes/tareas.png" class="card-img-top" alt="...">
-      <div class="card-body tareas-body">
-        <h5 class="card-title">Lista de Tareas</h5>
-        <p class="card-text">Listado de tareas con CRUD en Angular y guardado en LocalStorage <br><br></p>
-        <a href="https://angular-localstorage.vercel.app/" class="link" target="_blank">Visitar Proyecto </a>
-      </div>
-    </div>
-    <div class="card m-3" style="width: 20rem;">
-      <img src="../Imagenes/clima.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Aplicación del Clima</h5>
-        <p class="card-text">API del clima consumida con Angular e implementación de bootswatch<br><br></p>
-        <a href="https://angular-clima.vercel.app/" class="link" target="_blank">Visitar Proyecto </a>
+        <h5 class="card-title">Pagina para optica</h5>
+        <p class="card-text">Pagina creada para optica naniviss. Utilizando Angular, Bootstrap, entre otros</p>
+        <a href="https://www.opticananiviss.com.ar/inicio" class="link" target="_blank">Visitar Proyecto </a>
       </div>
     </div>
   </div>
