--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -1,117 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./../Imagenes/icono.png" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='proyectos.css'>
-    <title>Matías Colazo</title>
-</head>
-<body>
-    
-  <!--NAV BAR-->
-
-  <!--
-  <header class="header">
-    <nav class="menu-fixed">
-      <ul class="nav-links my-list">
-        <li><a class="nav-link active link-custom" aria-current="page" href="../index.html">Inicio</a></li>
-        <li><a class="nav-link active link-custom" aria-current="page" href="#">Proyectos</a></li>
-        <li><a class="nav-link active link-custom" aria-current="page" href="../SobreMi/sobremi.html">Sobre Mí</a></li>
-      </ul>
-    </nav>
-  </header>-->
-
-  <header class="header">
-  <nav class="nav menu-fixed">
-    <input type="checkbox" id="nav-check">
-    <div class="nav-btn">
-      <label for="nav-check">
-        <span></span>
-        <span></span>
-        <span></span>
-      </label>
-    </div>
-    <ul class="nav-list nav-links">
-      <li><a class="active link-custom" aria-current="page" href="../index.html">Inicio</a></li>
-      <li><a class="active link-custom" aria-current="page" href="#">Proyectos</a></li>
-      <li><a class="active link-custom" aria-current="page" href="../SobreMi/sobremi.html">Sobre Mí</a></li>
-    </ul>
-  </nav>
-</header>
-
-  <!--NAV BAR-->
-  <!-- PROYECTOS -->
-
-
-  <div class="cards full-height">
-    <div class="row">
-    <div class="card m-3 card-item" style="width: 20rem;">
-      <img src="../Imagenes/Captura.PNG" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Portfolio FullStack</h5>
-        <p class="card-text">PortaFolio creado con Angular, Bootstrap, MySQL y Java(SpringBoot), Entre otros</p>
-        <a href="https://frontendmatias.web.app/" class="link" target="_blank">Visitar Proyecto</a>
+<!-- Sección Proyectos -->
+<section class="proyectos-section">
+  <canvas id="particleCanvasProyectos" class="particles-canvas"></canvas>
+  <div class="proyectos-section__nodes"></div>
+  <div class="proyectos-section__container">
+    <h2 class="proyectos-section__title">Mis <span class="proyectos-section__highlight">Proyectos</span></h2>
+    <div class="proyectos-section__grid-wrapper">
+      <div class="proyectos-section__grid">
+      <a href="https://agendamb.vercel.app/" target="_blank" class="proyectos-section__card">
+        <div class="proyectos-section__card-top">
+          <img src="imagenes/agenda.png" alt="Proyecto 1" class="proyectos-section__image" />
+        </div>
+        <div class="proyectos-section__card-body">
+          <h3 class="proyectos-section__card-title">Proyecto 1</h3>
+          <p class="proyectos-section__card-text">Agenda personal con registro de usuarios. Permite agendar citas y gestionar tareas. Desarrollada con Angular, Node.js, MongoDB y Bootstrap</p>
+        </div>
+      </a>
+      <a href="https://www.valesosa.com.ar" target="_blank" class="proyectos-section__card">
+        <div class="proyectos-section__card-top">
+          <img src="imagenes/tiendadeuñas.png" alt="Proyecto 2" class="proyectos-section__image" />
+        </div>
+        <div class="proyectos-section__card-body">
+          <h3 class="proyectos-section__card-title">Proyecto 2</h3>
+          <p class="proyectos-section__card-text">Sitio web para escuela de manicura. Muestra cursos, talleres e insumos disponibles. Desarrollado únicamente con Angular y Bootstrap.</p>
+        </div>
+      </a>
+      <a href="https://www.terapiajdg.com" target="_blank" class="proyectos-section__card">
+        <div class="proyectos-section__card-top">
+          <img src="imagenes/psicologos.png" alt="Proyecto 3" class="proyectos-section__image" />
+        </div>
+        <div class="proyectos-section__card-body">
+          <h3 class="proyectos-section__card-title">Proyecto 3</h3>
+          <p class="proyectos-section__card-text">Página web para psicólogos con terapias tradicionales y alternativas. Muestra los profesionales disponibles y permite contacto para sesiones online.</p>
+        </div>
+      </a>
+      <a href="https://www.consultoramas.com.ar" target="_blank" class="proyectos-section__card">
+        <div class="proyectos-section__card-top">
+          <img src="imagenes/inmobiliaria.png" alt="Proyecto 4" class="proyectos-section__image" />
+        </div>
+        <div class="proyectos-section__card-body">
+          <h3 class="proyectos-section__card-title">Proyecto 4</h3>
+          <p class="proyectos-section__card-text">Sitio web de inmobiliaria que muestra propiedades disponibles para alquilar o vender. Presenta imágenes, descripciones y datos de contacto.</p>
+        </div>
+      </a>
       </div>
     </div>
-    <div class="card m-3 card-item" style="width: 20rem;">
-      <img src="../Imagenes/agenda.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Agenda Personal</h5>
-        <p class="card-text">Agenda personal creada en conjunto con Angular, Nodejs(express), MongoDB, entre otros</p>
-        <a href="https://agendamb.vercel.app/signin" class="link" target="_blank">Visitar Proyecto</a>
-      </div>
-    </div>
-    <div class="card m-3 card-item" style="width: 20rem;">
-      <img src="../Imagenes/tiendadeuñas.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pagina de Manicuria</h5>
-        <p class="card-text">Pagina de manicuria, creada en en conjunto con Angular, Bootstrap, entre otros </p>
-        <a href="https://valesosa.com.ar" class="link" target="_blank">Visitar Proyecto</a>
-      </div>
-    </div>
-    <div class="card m-3" style="width: 20rem;">
-      <img src="../Imagenes/psicologos.PNG" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pagina de Psicologos</h5>
-        <p class="card-text">Pagina para terapias psicologicas y alternativas. Utilizando Angular, Bootstrap, entre otros</p>
-        <a href="https://www.terapiajdg.com/" class="link" target="_blank">Visitar Proyecto </a>
-      </div>
-    </div>
-    <div class="card m-3" style="width: 20rem;">
-      <img src="../Imagenes/optica.PNG" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Pagina para optica</h5>
-        <p class="card-text">Pagina creada para optica naniviss. Utilizando Angular, Bootstrap, entre otros</p>
-        <a href="https://www.opticananiviss.com.ar/inicio" class="link" target="_blank">Visitar Proyecto </a>
-      </div>
-    </div>
+    <button class="proyectos-section__button">Ver todos los proyectos</button>
   </div>
-  <p class="texto"><b>Trabajando en más proyectos...🧉</p>
-</div>  
+</section>
 
-  <!-- PROYECTOS -->
-
-
-  <!-- FOOTER -->
-
-  <footer class="footer">
-    <div>
-      <h3>Podes contactarme por: </h3>
-    <div>
-    <a target="_blank" href="mailto:matias@itdeveloper.ar"><img src="../Imagenes/5968534.png" class="logo"></a>
-    <a target="_blank" href="https://github.com/MatiasColazo1"><img src="../Imagenes/github-original.svg" class="logo"></a>
-    <a target="_blank" href="https://www.linkedin.com/in/matias-colazo/"><img src="../Imagenes/linkedin-original.svg" class="logo"></a>
-    <a target="_blank" href="https://discord.com/users/511602986594729985"><img src="../Imagenes/descarga.png" class="logo"></a>
-  </div>
-  </div>
-  </footer>
-
-  <!-- FOOTER-->
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  <script src='proyectos.js'></script>
-</body>
-</html>
