--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -1,129 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- Sección Sobre Mí -->
+<section class="sobremi-section">
+  <canvas id="particleCanvasSobreMi" class="particles-canvas"></canvas>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./../Imagenes/icono.png" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel='stylesheet' type='text/css' media='screen' href='sobremi.css'>
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <title>Matías Colazo</title>
-</head>
-
-<body>
-
-  <!--NAV BAR-->
-
-
-  <header class="header">
-    <nav class="nav menu-fixed">
-      <input type="checkbox" id="nav-check">
-      <div class="nav-btn">
-        <label for="nav-check">
-          <span></span>
-          <span></span>
-          <span></span>
-        </label>
-      </div>
-      <ul class="nav-list nav-links">
-        <li><a class="active link-custom" aria-current="page" href="../index.html">Inicio</a></li>
-        <li><a class="active link-custom" aria-current="page" href="../Proyectos/proyectos.html">Proyectos</a></li>
-        <li><a class="active link-custom" aria-current="page" href="#">Sobre Mí</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!--NAV BAR-->
-
-  <!--FORMULARIO-->
-
-
-  <div class=" full-height">
-    <div>
-      <h3 class="subtitle">&lt;Matías/&gt;</h2>
-        <p class="parrafo">
-          ¡Hola! Mi nombre es Matías.<br>
-          Soy apasionado estudiante de programación de Rosario, Argentina.<br>
-          Con una sólida formación académica y un enfoque continuo en mejorar mis habilidades como desarrollador
-          fullStack donde me encuentro en constante aprendizaje para seguir creciendo en el campo IT.<br>
-          Actualmente me encuentro centrado en ampliar mis conocimientos en el área de QA (Control de calidad) lo que me
-          permite tener una visión más completa del ciclo de desarrollo de software.
+  <div class="sobremi-section__container">
+    <div class="sobremi-section__content-grid">
+      <!-- Texto principal -->
+      <div class="sobremi-section__text-content">
+        <h2 class="sobremi-section__title">
+          Mis <span class="sobremi-section__highlight">Habilidades</span>
+        </h2>
+        <p class="sobremi-section__description">
+          Especializado en desarrollo web moderno y diseño de interfaces con enfoque en experiencias interactivas.
         </p>
-        <h3 class="subtitle">&lt;Tecnologias/&gt;</h2>
+        <div class="sobremi-section__skills">
+          <span class="sobremi-section__skill-tag">Angular</span>
+          <span class="sobremi-section__skill-tag">Node.js</span>
+          <span class="sobremi-section__skill-tag">Bootstrap</span>
+          <span class="sobremi-section__skill-tag">MongoDB</span>
+          <span class="sobremi-section__skill-tag">Redis</span>
+          <span class="sobremi-section__skill-tag">SQL</span>
+          <span class="sobremi-section__skill-tag">Firebase</span>
+          <span class="sobremi-section__skill-tag">Postman</span>
+          <span class="sobremi-section__skill-tag">Git</span>
+        </div>
+      </div>
 
-          <div class="row">
-
-
-            <div class="card border-success m-3" style="max-width: 18rem;">
-              <div class="card-header">Front-End</div>
-              <div class="card-body text-success">
-                <h5 class="card-title">
-                  - HTML<br>
-                  - CSS<br>
-                  - Bootstrap<br>
-                  - Angular<br>
-                  - TypeScript<br>
-                  - JavaScript
-                </h5>
-              </div>
-            </div>
-
-            <div class="card border-success m-3" style="max-width: 18rem;">
-              <div class="card-header">Back-End</div>
-              <div class="card-body text-success">
-                <h5 class="card-title">
-                  - Node.js<br>
-                  - Express<br>
-                  - Java<br>
-                  - SpringBoot<br>
-                  - MySQL
-                  - MongoDB
-                </h5>
-              </div>
-            </div>
-
-            <div class="card border-success m-3" style="max-width: 18rem;">
-              <div class="card-header">Utilidades</div>
-              <div class="card-body text-success">
-                <h5 class="card-title">
-                  - Git<br>
-                  - GitHub<br>
-                  - Trello<br>
-                  - Postman
-                </h5>
-              </div>
-            </div>
-          </div>
+      <!-- Cuadrículas de tarjetas -->
+      <div class="sobremi-section__cards">
+        <div class="sobremi-section__card sobremi-section__card--emerald">
+          <div class="sobremi-section__card-icon">💻</div>
+          <h3 class="sobremi-section__card-title">Desarrollo</h3>
+          <p class="sobremi-section__card-text">Aplicaciones web modernas con las últimas tecnologías</p>
+        </div>
+        <div class="sobremi-section__card sobremi-section__card--blue">
+          <div class="sobremi-section__card-icon">🎨</div>
+          <h3 class="sobremi-section__card-title">Diseño</h3>
+          <p class="sobremi-section__card-text">Interfaces atractivas y experiencias de usuario intuitivas</p>
+        </div>
+        <div class="sobremi-section__card sobremi-section__card--purple">
+          <div class="sobremi-section__card-icon">💡</div>
+          <h3 class="sobremi-section__card-title">Creatividad</h3>
+          <p class="sobremi-section__card-text">Soluciones innovadoras para problemas complejos</p>
+        </div>
+        <div class="sobremi-section__card sobremi-section__card--pink">
+          <div class="sobremi-section__card-icon">👤</div>
+          <h3 class="sobremi-section__card-title">Experiencia</h3>
+          <p class="sobremi-section__card-text">Proyectos exitosos con clientes de diversos sectores</p>
+        </div>
+      </div>
     </div>
   </div>
-
-  <!--FORMULARIO-->
-
-  <!-- FOOTER -->
-
-  <footer class="footer">
-    <div>
-      <h3>Podes contactarme por: </h3>
-      <div>
-        <a target="_blank" href="mailto:matias@itdeveloper.ar"><img src="../Imagenes/5968534.png" class="logo"></a>
-        <a target="_blank" href="https://github.com/MatiasColazo1"><img src="../Imagenes/github-original.svg"
-            class="logo"></a>
-        <a target="_blank" href="https://www.linkedin.com/in/matias-colazo/"><img
-            src="../Imagenes/linkedin-original.svg" class="logo"></a>
-        <a target="_blank" href="https://discord.com/users/511602986594729985"><img src="../Imagenes/descarga.png"
-            class="logo"></a>
-      </div>
-    </div>
-  </footer>
-
-  <!-- FOOTER-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-  <script src='sobremi.js'></script>
-</body>
-
-</html>
+</section>
