--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -8,7 +8,7 @@
       <div class="proyectos-section__grid">
       <a href="https://agendamb.vercel.app/" target="_blank" class="proyectos-section__card">
         <div class="proyectos-section__card-top">
-          <img src="imagenes/agenda.png" alt="Proyecto 1" class="proyectos-section__image" />
+          <img src="/imagenes/agenda.png" alt="Proyecto 1" class="proyectos-section__image" />
         </div>
         <div class="proyectos-section__card-body">
           <h3 class="proyectos-section__card-title">Proyecto 1</h3>
@@ -17,7 +17,7 @@
       </a>
       <a href="https://www.valesosa.com.ar" target="_blank" class="proyectos-section__card">
         <div class="proyectos-section__card-top">
-          <img src="imagenes/tiendadeuñas.png" alt="Proyecto 2" class="proyectos-section__image" />
+          <img src="/imagenes/tiendadeuñas.png" alt="Proyecto 2" class="proyectos-section__image" />
         </div>
         <div class="proyectos-section__card-body">
           <h3 class="proyectos-section__card-title">Proyecto 2</h3>
@@ -26,7 +26,7 @@
       </a>
       <a href="https://www.terapiajdg.com" target="_blank" class="proyectos-section__card">
         <div class="proyectos-section__card-top">
-          <img src="imagenes/psicologos.png" alt="Proyecto 3" class="proyectos-section__image" />
+          <img src="/public/Imagenes/psicologos.png" alt="Proyecto 3" class="proyectos-section__image" />
         </div>
         <div class="proyectos-section__card-body">
           <h3 class="proyectos-section__card-title">Proyecto 3</h3>
@@ -35,7 +35,7 @@
       </a>
       <a href="https://www.consultoramas.com.ar" target="_blank" class="proyectos-section__card">
         <div class="proyectos-section__card-top">
-          <img src="imagenes/inmobiliaria.png" alt="Proyecto 4" class="proyectos-section__image" />
+          <img src="/imagenes/inmobiliaria.png" alt="Proyecto 4" class="proyectos-section__image" />
         </div>
         <div class="proyectos-section__card-body">
           <h3 class="proyectos-section__card-title">Proyecto 4</h3>
