--- a/Proyectos/proyectos.html
+++ b/Proyectos/proyectos.html
@@ -26,7 +26,7 @@
       </a>
       <a href="https://www.terapiajdg.com" target="_blank" class="proyectos-section__card">
         <div class="proyectos-section__card-top">
-          <img src="/Imagenes/psicologos.png" alt="Proyecto 3" class="proyectos-section__image" />
+          <img src="/Imagenes/psicologos.PNG" alt="Proyecto 3" class="proyectos-section__image" />
         </div>
         <div class="proyectos-section__card-body">
           <h3 class="proyectos-section__card-title">Proyecto 3</h3>
