--- a/SobreMi/sobremi.html
+++ b/SobreMi/sobremi.html
@@ -10,7 +10,7 @@
           Mis <span class="sobremi-section__highlight">Habilidades</span>
         </h2>
         <p class="sobremi-section__description">
-          Especializado en desarrollo web moderno y diseño de interfaces con enfoque en experiencias interactivas.
+          Especializado en desarrollo web moderno enfocado en la creación de soluciones intuitivas y dinámicas.
         </p>
         <div class="sobremi-section__skills">
           <span class="sobremi-section__skill-tag">Angular</span>
