arreglo en index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Matías Colazo</title>
-    <meta name="description" content="Matías Colazo - Portfolio Web: Desarrollador Full Stack y QA">
+    <meta name="description" content="Matías Colazo - Portfolio Web: Desarrollador Full Stack">
     <meta property="og:image" content="https://i.ibb.co/Z8LHfmC/IMG-20220717-WA0002-600.jpg">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" href="./Imagenes/icono.png" />
