--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Matías Colazo - Portfolio Web: Desarrollador Full Stack">
     <meta property="og:image" content="https://i.ibb.co/Z8LHfmC/IMG-20220717-WA0002-600.jpg">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="shortcut icon" href="./Imagenes/icono.png" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <link rel="stylesheet" href="SobreMi/sobremi.css" />
     <link rel="stylesheet" href="Proyectos/proyectos.css" />
